CompilerProject/src/Syntactic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    READ
    VAR
    WRITE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID FIM_LINHA bloco comando_composto PONTO_FINAL
Rule 2     bloco -> new_scope parte_declaracao_de_variaveis parte_declaracao_de_subrotinas
Rule 3     parte_declaracao_de_variaveis -> declaracao_de_variaveis FIM_LINHA parte_declaracao_de_variaveis
Rule 4     parte_declaracao_de_variaveis -> empty
Rule 5     declaracao_de_variaveis -> tipo_simples lista_de_parametros
Rule 6     tipo_simples -> INT
Rule 7     tipo_simples -> REAL
Rule 8     tipo_simples -> BOOLEAN
Rule 9     parte_declaracao_de_subrotinas -> declaracao_de_procedimento
Rule 10    parte_declaracao_de_subrotinas -> empty
Rule 11    declaracao_de_procedimento -> PROCEDURE ID parametros_formais FIM_LINHA bloco comando_composto FIM_LINHA
Rule 12    parametros_formais -> AP mais_parametros_formais FP
Rule 13    mais_parametros_formais -> FIM_LINHA lista_de_parametros DOIS_PONTOS tipo_simples mais_parametros_formais
Rule 14    mais_parametros_formais -> lista_de_parametros DOIS_PONTOS tipo_simples mais_parametros_formais
Rule 15    mais_parametros_formais -> empty
Rule 16    comando_composto -> BEGIN new_begin comandos END
Rule 17    new_scope -> <empty>
Rule 18    new_begin -> <empty>
Rule 19    comandos -> atribuicao FIM_LINHA comandos
Rule 20    comandos -> chamada_de_procedimento FIM_LINHA comandos
Rule 21    comandos -> comando_composto comandos
Rule 22    comandos -> comando_condicional_1 comandos
Rule 23    comandos -> comando_repetitivo_1 comandos
Rule 24    comandos -> empty
Rule 25    atribuicao -> variavel OPIGUAL_ATRIB expressao
Rule 26    comando_condicional_1 -> IF AP expressao FP THEN comandos
Rule 27    comando_condicional_1 -> IF AP expressao FP THEN comandos ELSE comandos
Rule 28    comando_repetitivo_1 -> WHILE AP expressao FP DO comandos
Rule 29    chamada_de_procedimento -> variavel AP lista_de_parametros FP
Rule 30    lista_de_parametros -> expressao mais_parametros
Rule 31    lista_de_parametros -> empty
Rule 32    mais_parametros -> SEPARADOR lista_de_parametros
Rule 33    mais_parametros -> empty
Rule 34    expressao -> expressao_simples
Rule 35    expressao -> expressao_simples relacao expressao_simples
Rule 36    relacao -> IGUAL
Rule 37    relacao -> MAIOR_IGUAL
Rule 38    relacao -> MAIOR
Rule 39    relacao -> MENOR_IGUAL
Rule 40    relacao -> MENOR
Rule 41    expressao_simples -> expressao_simples OPSOMA termo
Rule 42    expressao_simples -> expressao_simples OPSUB termo
Rule 43    expressao_simples -> expressao_simples OR termo
Rule 44    expressao_simples -> termo
Rule 45    termo -> termo OPMUL fator
Rule 46    termo -> termo OPDIV fator
Rule 47    termo -> termo DIV fator
Rule 48    termo -> termo AND fator
Rule 49    termo -> fator
Rule 50    fator -> variavel
Rule 51    fator -> numero
Rule 52    fator -> TRUE
Rule 53    fator -> FALSE
Rule 54    fator -> AP expressao_simples FP
Rule 55    fator -> NOT fator
Rule 56    numero -> NUM_INT
Rule 57    numero -> NUM_REAL
Rule 58    variavel -> ID
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
AP                   : 12 26 27 28 29 54
BEGIN                : 16
BOOLEAN              : 8
DIV                  : 47
DO                   : 28
DOIS_PONTOS          : 13 14
ELSE                 : 27
END                  : 16
FALSE                : 53
FIM_LINHA            : 1 3 11 11 13 19 20
FP                   : 12 26 27 28 29 54
ID                   : 1 11 58
IF                   : 26 27
IGUAL                : 36
INT                  : 6
MAIOR                : 38
MAIOR_IGUAL          : 37
MENOR                : 40
MENOR_IGUAL          : 39
NOT                  : 55
NUM_INT              : 56
NUM_REAL             : 57
OPDIV                : 46
OPIGUAL_ATRIB        : 25
OPMUL                : 45
OPSOMA               : 41
OPSUB                : 42
OR                   : 43
PONTO_FINAL          : 1
PROCEDURE            : 11
PROGRAM              : 1
READ                 : 
REAL                 : 7
SEPARADOR            : 32
THEN                 : 26 27
TRUE                 : 52
VAR                  : 
WHILE                : 28
WRITE                : 
error                : 

Nonterminals, with rules where they appear

atribuicao           : 19
bloco                : 1 11
chamada_de_procedimento : 20
comando_composto     : 1 11 21
comando_condicional_1 : 22
comando_repetitivo_1 : 23
comandos             : 16 19 20 21 22 23 26 27 27 28
declaracao_de_procedimento : 9
declaracao_de_variaveis : 3
empty                : 4 10 15 24 31 33
expressao            : 25 26 27 28 30
expressao_simples    : 34 35 35 41 42 43 54
fator                : 45 46 47 48 49 55
lista_de_parametros  : 5 13 14 29 32
mais_parametros      : 30
mais_parametros_formais : 12 13 14
new_begin            : 16
new_scope            : 2
numero               : 51
parametros_formais   : 11
parte_declaracao_de_subrotinas : 2
parte_declaracao_de_variaveis : 2 3
programa             : 0
relacao              : 35
termo                : 41 42 43 44 45 46 47 48
tipo_simples         : 5 13 14
variavel             : 25 29 50

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID FIM_LINHA bloco comando_composto PONTO_FINAL

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID FIM_LINHA bloco comando_composto PONTO_FINAL

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . FIM_LINHA bloco comando_composto PONTO_FINAL

    FIM_LINHA       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID FIM_LINHA . bloco comando_composto PONTO_FINAL
    (2) bloco -> . new_scope parte_declaracao_de_variaveis parte_declaracao_de_subrotinas
    (17) new_scope -> .

    INT             reduce using rule 17 (new_scope -> .)
    REAL            reduce using rule 17 (new_scope -> .)
    BOOLEAN         reduce using rule 17 (new_scope -> .)
    PROCEDURE       reduce using rule 17 (new_scope -> .)
    BEGIN           reduce using rule 17 (new_scope -> .)

    bloco                          shift and go to state 5
    new_scope                      shift and go to state 6

state 5

    (1) programa -> PROGRAM ID FIM_LINHA bloco . comando_composto PONTO_FINAL
    (16) comando_composto -> . BEGIN new_begin comandos END

    BEGIN           shift and go to state 8

    comando_composto               shift and go to state 7

state 6

    (2) bloco -> new_scope . parte_declaracao_de_variaveis parte_declaracao_de_subrotinas
    (3) parte_declaracao_de_variaveis -> . declaracao_de_variaveis FIM_LINHA parte_declaracao_de_variaveis
    (4) parte_declaracao_de_variaveis -> . empty
    (5) declaracao_de_variaveis -> . tipo_simples lista_de_parametros
    (59) empty -> .
    (6) tipo_simples -> . INT
    (7) tipo_simples -> . REAL
    (8) tipo_simples -> . BOOLEAN

    PROCEDURE       reduce using rule 59 (empty -> .)
    BEGIN           reduce using rule 59 (empty -> .)
    INT             shift and go to state 13
    REAL            shift and go to state 14
    BOOLEAN         shift and go to state 15

    parte_declaracao_de_variaveis  shift and go to state 9
    declaracao_de_variaveis        shift and go to state 10
    empty                          shift and go to state 11
    tipo_simples                   shift and go to state 12

state 7

    (1) programa -> PROGRAM ID FIM_LINHA bloco comando_composto . PONTO_FINAL

    PONTO_FINAL     shift and go to state 16


state 8

    (16) comando_composto -> BEGIN . new_begin comandos END
    (18) new_begin -> .

    BEGIN           reduce using rule 18 (new_begin -> .)
    IF              reduce using rule 18 (new_begin -> .)
    WHILE           reduce using rule 18 (new_begin -> .)
    ID              reduce using rule 18 (new_begin -> .)
    END             reduce using rule 18 (new_begin -> .)

    new_begin                      shift and go to state 17

state 9

    (2) bloco -> new_scope parte_declaracao_de_variaveis . parte_declaracao_de_subrotinas
    (9) parte_declaracao_de_subrotinas -> . declaracao_de_procedimento
    (10) parte_declaracao_de_subrotinas -> . empty
    (11) declaracao_de_procedimento -> . PROCEDURE ID parametros_formais FIM_LINHA bloco comando_composto FIM_LINHA
    (59) empty -> .

    PROCEDURE       shift and go to state 21
    BEGIN           reduce using rule 59 (empty -> .)

    parte_declaracao_de_subrotinas shift and go to state 18
    declaracao_de_procedimento     shift and go to state 19
    empty                          shift and go to state 20

state 10

    (3) parte_declaracao_de_variaveis -> declaracao_de_variaveis . FIM_LINHA parte_declaracao_de_variaveis

    FIM_LINHA       shift and go to state 22


state 11

    (4) parte_declaracao_de_variaveis -> empty .

    PROCEDURE       reduce using rule 4 (parte_declaracao_de_variaveis -> empty .)
    BEGIN           reduce using rule 4 (parte_declaracao_de_variaveis -> empty .)


state 12

    (5) declaracao_de_variaveis -> tipo_simples . lista_de_parametros
    (30) lista_de_parametros -> . expressao mais_parametros
    (31) lista_de_parametros -> . empty
    (34) expressao -> . expressao_simples
    (35) expressao -> . expressao_simples relacao expressao_simples
    (59) empty -> .
    (41) expressao_simples -> . expressao_simples OPSOMA termo
    (42) expressao_simples -> . expressao_simples OPSUB termo
    (43) expressao_simples -> . expressao_simples OR termo
    (44) expressao_simples -> . termo
    (45) termo -> . termo OPMUL fator
    (46) termo -> . termo OPDIV fator
    (47) termo -> . termo DIV fator
    (48) termo -> . termo AND fator
    (49) termo -> . fator
    (50) fator -> . variavel
    (51) fator -> . numero
    (52) fator -> . TRUE
    (53) fator -> . FALSE
    (54) fator -> . AP expressao_simples FP
    (55) fator -> . NOT fator
    (58) variavel -> . ID
    (56) numero -> . NUM_INT
    (57) numero -> . NUM_REAL

    FIM_LINHA       reduce using rule 59 (empty -> .)
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    AP              shift and go to state 33
    NOT             shift and go to state 34
    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37

    lista_de_parametros            shift and go to state 23
    expressao                      shift and go to state 24
    empty                          shift and go to state 25
    expressao_simples              shift and go to state 26
    termo                          shift and go to state 27
    fator                          shift and go to state 28
    variavel                       shift and go to state 29
    numero                         shift and go to state 30

state 13

    (6) tipo_simples -> INT .

    TRUE            reduce using rule 6 (tipo_simples -> INT .)
    FALSE           reduce using rule 6 (tipo_simples -> INT .)
    AP              reduce using rule 6 (tipo_simples -> INT .)
    NOT             reduce using rule 6 (tipo_simples -> INT .)
    ID              reduce using rule 6 (tipo_simples -> INT .)
    NUM_INT         reduce using rule 6 (tipo_simples -> INT .)
    NUM_REAL        reduce using rule 6 (tipo_simples -> INT .)
    FIM_LINHA       reduce using rule 6 (tipo_simples -> INT .)
    DOIS_PONTOS     reduce using rule 6 (tipo_simples -> INT .)
    FP              reduce using rule 6 (tipo_simples -> INT .)


state 14

    (7) tipo_simples -> REAL .

    TRUE            reduce using rule 7 (tipo_simples -> REAL .)
    FALSE           reduce using rule 7 (tipo_simples -> REAL .)
    AP              reduce using rule 7 (tipo_simples -> REAL .)
    NOT             reduce using rule 7 (tipo_simples -> REAL .)
    ID              reduce using rule 7 (tipo_simples -> REAL .)
    NUM_INT         reduce using rule 7 (tipo_simples -> REAL .)
    NUM_REAL        reduce using rule 7 (tipo_simples -> REAL .)
    FIM_LINHA       reduce using rule 7 (tipo_simples -> REAL .)
    DOIS_PONTOS     reduce using rule 7 (tipo_simples -> REAL .)
    FP              reduce using rule 7 (tipo_simples -> REAL .)


state 15

    (8) tipo_simples -> BOOLEAN .

    TRUE            reduce using rule 8 (tipo_simples -> BOOLEAN .)
    FALSE           reduce using rule 8 (tipo_simples -> BOOLEAN .)
    AP              reduce using rule 8 (tipo_simples -> BOOLEAN .)
    NOT             reduce using rule 8 (tipo_simples -> BOOLEAN .)
    ID              reduce using rule 8 (tipo_simples -> BOOLEAN .)
    NUM_INT         reduce using rule 8 (tipo_simples -> BOOLEAN .)
    NUM_REAL        reduce using rule 8 (tipo_simples -> BOOLEAN .)
    FIM_LINHA       reduce using rule 8 (tipo_simples -> BOOLEAN .)
    DOIS_PONTOS     reduce using rule 8 (tipo_simples -> BOOLEAN .)
    FP              reduce using rule 8 (tipo_simples -> BOOLEAN .)


state 16

    (1) programa -> PROGRAM ID FIM_LINHA bloco comando_composto PONTO_FINAL .

    $end            reduce using rule 1 (programa -> PROGRAM ID FIM_LINHA bloco comando_composto PONTO_FINAL .)


state 17

    (16) comando_composto -> BEGIN new_begin . comandos END
    (19) comandos -> . atribuicao FIM_LINHA comandos
    (20) comandos -> . chamada_de_procedimento FIM_LINHA comandos
    (21) comandos -> . comando_composto comandos
    (22) comandos -> . comando_condicional_1 comandos
    (23) comandos -> . comando_repetitivo_1 comandos
    (24) comandos -> . empty
    (25) atribuicao -> . variavel OPIGUAL_ATRIB expressao
    (29) chamada_de_procedimento -> . variavel AP lista_de_parametros FP
    (16) comando_composto -> . BEGIN new_begin comandos END
    (26) comando_condicional_1 -> . IF AP expressao FP THEN comandos
    (27) comando_condicional_1 -> . IF AP expressao FP THEN comandos ELSE comandos
    (28) comando_repetitivo_1 -> . WHILE AP expressao FP DO comandos
    (59) empty -> .
    (58) variavel -> . ID

    BEGIN           shift and go to state 8
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    END             reduce using rule 59 (empty -> .)
    ID              shift and go to state 35

    comandos                       shift and go to state 38
    atribuicao                     shift and go to state 39
    chamada_de_procedimento        shift and go to state 40
    comando_composto               shift and go to state 41
    comando_condicional_1          shift and go to state 42
    comando_repetitivo_1           shift and go to state 43
    empty                          shift and go to state 44
    variavel                       shift and go to state 45

state 18

    (2) bloco -> new_scope parte_declaracao_de_variaveis parte_declaracao_de_subrotinas .

    BEGIN           reduce using rule 2 (bloco -> new_scope parte_declaracao_de_variaveis parte_declaracao_de_subrotinas .)


state 19

    (9) parte_declaracao_de_subrotinas -> declaracao_de_procedimento .

    BEGIN           reduce using rule 9 (parte_declaracao_de_subrotinas -> declaracao_de_procedimento .)


state 20

    (10) parte_declaracao_de_subrotinas -> empty .

    BEGIN           reduce using rule 10 (parte_declaracao_de_subrotinas -> empty .)


state 21

    (11) declaracao_de_procedimento -> PROCEDURE . ID parametros_formais FIM_LINHA bloco comando_composto FIM_LINHA

    ID              shift and go to state 48


state 22

    (3) parte_declaracao_de_variaveis -> declaracao_de_variaveis FIM_LINHA . parte_declaracao_de_variaveis
    (3) parte_declaracao_de_variaveis -> . declaracao_de_variaveis FIM_LINHA parte_declaracao_de_variaveis
    (4) parte_declaracao_de_variaveis -> . empty
    (5) declaracao_de_variaveis -> . tipo_simples lista_de_parametros
    (59) empty -> .
    (6) tipo_simples -> . INT
    (7) tipo_simples -> . REAL
    (8) tipo_simples -> . BOOLEAN

    PROCEDURE       reduce using rule 59 (empty -> .)
    BEGIN           reduce using rule 59 (empty -> .)
    INT             shift and go to state 13
    REAL            shift and go to state 14
    BOOLEAN         shift and go to state 15

    declaracao_de_variaveis        shift and go to state 10
    parte_declaracao_de_variaveis  shift and go to state 49
    empty                          shift and go to state 11
    tipo_simples                   shift and go to state 12

state 23

    (5) declaracao_de_variaveis -> tipo_simples lista_de_parametros .

    FIM_LINHA       reduce using rule 5 (declaracao_de_variaveis -> tipo_simples lista_de_parametros .)


state 24

    (30) lista_de_parametros -> expressao . mais_parametros
    (32) mais_parametros -> . SEPARADOR lista_de_parametros
    (33) mais_parametros -> . empty
    (59) empty -> .

    SEPARADOR       shift and go to state 51
    FIM_LINHA       reduce using rule 59 (empty -> .)
    FP              reduce using rule 59 (empty -> .)
    DOIS_PONTOS     reduce using rule 59 (empty -> .)

    mais_parametros                shift and go to state 50
    empty                          shift and go to state 52

state 25

    (31) lista_de_parametros -> empty .

    FIM_LINHA       reduce using rule 31 (lista_de_parametros -> empty .)
    FP              reduce using rule 31 (lista_de_parametros -> empty .)
    DOIS_PONTOS     reduce using rule 31 (lista_de_parametros -> empty .)


state 26

    (34) expressao -> expressao_simples .
    (35) expressao -> expressao_simples . relacao expressao_simples
    (41) expressao_simples -> expressao_simples . OPSOMA termo
    (42) expressao_simples -> expressao_simples . OPSUB termo
    (43) expressao_simples -> expressao_simples . OR termo
    (36) relacao -> . IGUAL
    (37) relacao -> . MAIOR_IGUAL
    (38) relacao -> . MAIOR
    (39) relacao -> . MENOR_IGUAL
    (40) relacao -> . MENOR

    SEPARADOR       reduce using rule 34 (expressao -> expressao_simples .)
    FIM_LINHA       reduce using rule 34 (expressao -> expressao_simples .)
    FP              reduce using rule 34 (expressao -> expressao_simples .)
    DOIS_PONTOS     reduce using rule 34 (expressao -> expressao_simples .)
    OPSOMA          shift and go to state 54
    OPSUB           shift and go to state 55
    OR              shift and go to state 56
    IGUAL           shift and go to state 57
    MAIOR_IGUAL     shift and go to state 58
    MAIOR           shift and go to state 59
    MENOR_IGUAL     shift and go to state 60
    MENOR           shift and go to state 61

    relacao                        shift and go to state 53

state 27

    (44) expressao_simples -> termo .
    (45) termo -> termo . OPMUL fator
    (46) termo -> termo . OPDIV fator
    (47) termo -> termo . DIV fator
    (48) termo -> termo . AND fator

    OPSOMA          reduce using rule 44 (expressao_simples -> termo .)
    OPSUB           reduce using rule 44 (expressao_simples -> termo .)
    OR              reduce using rule 44 (expressao_simples -> termo .)
    IGUAL           reduce using rule 44 (expressao_simples -> termo .)
    MAIOR_IGUAL     reduce using rule 44 (expressao_simples -> termo .)
    MAIOR           reduce using rule 44 (expressao_simples -> termo .)
    MENOR_IGUAL     reduce using rule 44 (expressao_simples -> termo .)
    MENOR           reduce using rule 44 (expressao_simples -> termo .)
    SEPARADOR       reduce using rule 44 (expressao_simples -> termo .)
    FIM_LINHA       reduce using rule 44 (expressao_simples -> termo .)
    FP              reduce using rule 44 (expressao_simples -> termo .)
    DOIS_PONTOS     reduce using rule 44 (expressao_simples -> termo .)
    OPMUL           shift and go to state 62
    OPDIV           shift and go to state 63
    DIV             shift and go to state 64
    AND             shift and go to state 65


state 28

    (49) termo -> fator .

    OPMUL           reduce using rule 49 (termo -> fator .)
    OPDIV           reduce using rule 49 (termo -> fator .)
    DIV             reduce using rule 49 (termo -> fator .)
    AND             reduce using rule 49 (termo -> fator .)
    OPSOMA          reduce using rule 49 (termo -> fator .)
    OPSUB           reduce using rule 49 (termo -> fator .)
    OR              reduce using rule 49 (termo -> fator .)
    IGUAL           reduce using rule 49 (termo -> fator .)
    MAIOR_IGUAL     reduce using rule 49 (termo -> fator .)
    MAIOR           reduce using rule 49 (termo -> fator .)
    MENOR_IGUAL     reduce using rule 49 (termo -> fator .)
    MENOR           reduce using rule 49 (termo -> fator .)
    SEPARADOR       reduce using rule 49 (termo -> fator .)
    FIM_LINHA       reduce using rule 49 (termo -> fator .)
    FP              reduce using rule 49 (termo -> fator .)
    DOIS_PONTOS     reduce using rule 49 (termo -> fator .)


state 29

    (50) fator -> variavel .

    OPMUL           reduce using rule 50 (fator -> variavel .)
    OPDIV           reduce using rule 50 (fator -> variavel .)
    DIV             reduce using rule 50 (fator -> variavel .)
    AND             reduce using rule 50 (fator -> variavel .)
    OPSOMA          reduce using rule 50 (fator -> variavel .)
    OPSUB           reduce using rule 50 (fator -> variavel .)
    OR              reduce using rule 50 (fator -> variavel .)
    IGUAL           reduce using rule 50 (fator -> variavel .)
    MAIOR_IGUAL     reduce using rule 50 (fator -> variavel .)
    MAIOR           reduce using rule 50 (fator -> variavel .)
    MENOR_IGUAL     reduce using rule 50 (fator -> variavel .)
    MENOR           reduce using rule 50 (fator -> variavel .)
    SEPARADOR       reduce using rule 50 (fator -> variavel .)
    FIM_LINHA       reduce using rule 50 (fator -> variavel .)
    FP              reduce using rule 50 (fator -> variavel .)
    DOIS_PONTOS     reduce using rule 50 (fator -> variavel .)


state 30

    (51) fator -> numero .

    OPMUL           reduce using rule 51 (fator -> numero .)
    OPDIV           reduce using rule 51 (fator -> numero .)
    DIV             reduce using rule 51 (fator -> numero .)
    AND             reduce using rule 51 (fator -> numero .)
    OPSOMA          reduce using rule 51 (fator -> numero .)
    OPSUB           reduce using rule 51 (fator -> numero .)
    OR              reduce using rule 51 (fator -> numero .)
    IGUAL           reduce using rule 51 (fator -> numero .)
    MAIOR_IGUAL     reduce using rule 51 (fator -> numero .)
    MAIOR           reduce using rule 51 (fator -> numero .)
    MENOR_IGUAL     reduce using rule 51 (fator -> numero .)
    MENOR           reduce using rule 51 (fator -> numero .)
    SEPARADOR       reduce using rule 51 (fator -> numero .)
    FIM_LINHA       reduce using rule 51 (fator -> numero .)
    FP              reduce using rule 51 (fator -> numero .)
    DOIS_PONTOS     reduce using rule 51 (fator -> numero .)


state 31

    (52) fator -> TRUE .

    OPMUL           reduce using rule 52 (fator -> TRUE .)
    OPDIV           reduce using rule 52 (fator -> TRUE .)
    DIV             reduce using rule 52 (fator -> TRUE .)
    AND             reduce using rule 52 (fator -> TRUE .)
    OPSOMA          reduce using rule 52 (fator -> TRUE .)
    OPSUB           reduce using rule 52 (fator -> TRUE .)
    OR              reduce using rule 52 (fator -> TRUE .)
    IGUAL           reduce using rule 52 (fator -> TRUE .)
    MAIOR_IGUAL     reduce using rule 52 (fator -> TRUE .)
    MAIOR           reduce using rule 52 (fator -> TRUE .)
    MENOR_IGUAL     reduce using rule 52 (fator -> TRUE .)
    MENOR           reduce using rule 52 (fator -> TRUE .)
    SEPARADOR       reduce using rule 52 (fator -> TRUE .)
    FIM_LINHA       reduce using rule 52 (fator -> TRUE .)
    FP              reduce using rule 52 (fator -> TRUE .)
    DOIS_PONTOS     reduce using rule 52 (fator -> TRUE .)


state 32

    (53) fator -> FALSE .

    OPMUL           reduce using rule 53 (fator -> FALSE .)
    OPDIV           reduce using rule 53 (fator -> FALSE .)
    DIV             reduce using rule 53 (fator -> FALSE .)
    AND             reduce using rule 53 (fator -> FALSE .)
    OPSOMA          reduce using rule 53 (fator -> FALSE .)
    OPSUB           reduce using rule 53 (fator -> FALSE .)
    OR              reduce using rule 53 (fator -> FALSE .)
    IGUAL           reduce using rule 53 (fator -> FALSE .)
    MAIOR_IGUAL     reduce using rule 53 (fator -> FALSE .)
    MAIOR           reduce using rule 53 (fator -> FALSE .)
    MENOR_IGUAL     reduce using rule 53 (fator -> FALSE .)
    MENOR           reduce using rule 53 (fator -> FALSE .)
    SEPARADOR       reduce using rule 53 (fator -> FALSE .)
    FIM_LINHA       reduce using rule 53 (fator -> FALSE .)
    FP              reduce using rule 53 (fator -> FALSE .)
    DOIS_PONTOS     reduce using rule 53 (fator -> FALSE .)


state 33

    (54) fator -> AP . expressao_simples FP
    (41) expressao_simples -> . expressao_simples OPSOMA termo
    (42) expressao_simples -> . expressao_simples OPSUB termo
    (43) expressao_simples -> . expressao_simples OR termo
    (44) expressao_simples -> . termo
    (45) termo -> . termo OPMUL fator
    (46) termo -> . termo OPDIV fator
    (47) termo -> . termo DIV fator
    (48) termo -> . termo AND fator
    (49) termo -> . fator
    (50) fator -> . variavel
    (51) fator -> . numero
    (52) fator -> . TRUE
    (53) fator -> . FALSE
    (54) fator -> . AP expressao_simples FP
    (55) fator -> . NOT fator
    (58) variavel -> . ID
    (56) numero -> . NUM_INT
    (57) numero -> . NUM_REAL

    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    AP              shift and go to state 33
    NOT             shift and go to state 34
    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37

    expressao_simples              shift and go to state 66
    termo                          shift and go to state 27
    fator                          shift and go to state 28
    variavel                       shift and go to state 29
    numero                         shift and go to state 30

state 34

    (55) fator -> NOT . fator
    (50) fator -> . variavel
    (51) fator -> . numero
    (52) fator -> . TRUE
    (53) fator -> . FALSE
    (54) fator -> . AP expressao_simples FP
    (55) fator -> . NOT fator
    (58) variavel -> . ID
    (56) numero -> . NUM_INT
    (57) numero -> . NUM_REAL

    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    AP              shift and go to state 33
    NOT             shift and go to state 34
    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37

    fator                          shift and go to state 67
    variavel                       shift and go to state 29
    numero                         shift and go to state 30

state 35

    (58) variavel -> ID .

    OPMUL           reduce using rule 58 (variavel -> ID .)
    OPDIV           reduce using rule 58 (variavel -> ID .)
    DIV             reduce using rule 58 (variavel -> ID .)
    AND             reduce using rule 58 (variavel -> ID .)
    OPSOMA          reduce using rule 58 (variavel -> ID .)
    OPSUB           reduce using rule 58 (variavel -> ID .)
    OR              reduce using rule 58 (variavel -> ID .)
    IGUAL           reduce using rule 58 (variavel -> ID .)
    MAIOR_IGUAL     reduce using rule 58 (variavel -> ID .)
    MAIOR           reduce using rule 58 (variavel -> ID .)
    MENOR_IGUAL     reduce using rule 58 (variavel -> ID .)
    MENOR           reduce using rule 58 (variavel -> ID .)
    SEPARADOR       reduce using rule 58 (variavel -> ID .)
    FIM_LINHA       reduce using rule 58 (variavel -> ID .)
    OPIGUAL_ATRIB   reduce using rule 58 (variavel -> ID .)
    AP              reduce using rule 58 (variavel -> ID .)
    FP              reduce using rule 58 (variavel -> ID .)
    DOIS_PONTOS     reduce using rule 58 (variavel -> ID .)


state 36

    (56) numero -> NUM_INT .

    OPMUL           reduce using rule 56 (numero -> NUM_INT .)
    OPDIV           reduce using rule 56 (numero -> NUM_INT .)
    DIV             reduce using rule 56 (numero -> NUM_INT .)
    AND             reduce using rule 56 (numero -> NUM_INT .)
    OPSOMA          reduce using rule 56 (numero -> NUM_INT .)
    OPSUB           reduce using rule 56 (numero -> NUM_INT .)
    OR              reduce using rule 56 (numero -> NUM_INT .)
    IGUAL           reduce using rule 56 (numero -> NUM_INT .)
    MAIOR_IGUAL     reduce using rule 56 (numero -> NUM_INT .)
    MAIOR           reduce using rule 56 (numero -> NUM_INT .)
    MENOR_IGUAL     reduce using rule 56 (numero -> NUM_INT .)
    MENOR           reduce using rule 56 (numero -> NUM_INT .)
    SEPARADOR       reduce using rule 56 (numero -> NUM_INT .)
    FIM_LINHA       reduce using rule 56 (numero -> NUM_INT .)
    FP              reduce using rule 56 (numero -> NUM_INT .)
    DOIS_PONTOS     reduce using rule 56 (numero -> NUM_INT .)


state 37

    (57) numero -> NUM_REAL .

    OPMUL           reduce using rule 57 (numero -> NUM_REAL .)
    OPDIV           reduce using rule 57 (numero -> NUM_REAL .)
    DIV             reduce using rule 57 (numero -> NUM_REAL .)
    AND             reduce using rule 57 (numero -> NUM_REAL .)
    OPSOMA          reduce using rule 57 (numero -> NUM_REAL .)
    OPSUB           reduce using rule 57 (numero -> NUM_REAL .)
    OR              reduce using rule 57 (numero -> NUM_REAL .)
    IGUAL           reduce using rule 57 (numero -> NUM_REAL .)
    MAIOR_IGUAL     reduce using rule 57 (numero -> NUM_REAL .)
    MAIOR           reduce using rule 57 (numero -> NUM_REAL .)
    MENOR_IGUAL     reduce using rule 57 (numero -> NUM_REAL .)
    MENOR           reduce using rule 57 (numero -> NUM_REAL .)
    SEPARADOR       reduce using rule 57 (numero -> NUM_REAL .)
    FIM_LINHA       reduce using rule 57 (numero -> NUM_REAL .)
    FP              reduce using rule 57 (numero -> NUM_REAL .)
    DOIS_PONTOS     reduce using rule 57 (numero -> NUM_REAL .)


state 38

    (16) comando_composto -> BEGIN new_begin comandos . END

    END             shift and go to state 68


state 39

    (19) comandos -> atribuicao . FIM_LINHA comandos

    FIM_LINHA       shift and go to state 69


state 40

    (20) comandos -> chamada_de_procedimento . FIM_LINHA comandos

    FIM_LINHA       shift and go to state 70


state 41

    (21) comandos -> comando_composto . comandos
    (19) comandos -> . atribuicao FIM_LINHA comandos
    (20) comandos -> . chamada_de_procedimento FIM_LINHA comandos
    (21) comandos -> . comando_composto comandos
    (22) comandos -> . comando_condicional_1 comandos
    (23) comandos -> . comando_repetitivo_1 comandos
    (24) comandos -> . empty
    (25) atribuicao -> . variavel OPIGUAL_ATRIB expressao
    (29) chamada_de_procedimento -> . variavel AP lista_de_parametros FP
    (16) comando_composto -> . BEGIN new_begin comandos END
    (26) comando_condicional_1 -> . IF AP expressao FP THEN comandos
    (27) comando_condicional_1 -> . IF AP expressao FP THEN comandos ELSE comandos
    (28) comando_repetitivo_1 -> . WHILE AP expressao FP DO comandos
    (59) empty -> .
    (58) variavel -> . ID

  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    BEGIN           shift and go to state 8
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    END             reduce using rule 59 (empty -> .)
    ELSE            reduce using rule 59 (empty -> .)
    ID              shift and go to state 35

  ! BEGIN           [ reduce using rule 59 (empty -> .) ]
  ! IF              [ reduce using rule 59 (empty -> .) ]
  ! WHILE           [ reduce using rule 59 (empty -> .) ]
  ! ID              [ reduce using rule 59 (empty -> .) ]

    comando_composto               shift and go to state 41
    comandos                       shift and go to state 71
    atribuicao                     shift and go to state 39
    chamada_de_procedimento        shift and go to state 40
    comando_condicional_1          shift and go to state 42
    comando_repetitivo_1           shift and go to state 43
    empty                          shift and go to state 44
    variavel                       shift and go to state 45

state 42

    (22) comandos -> comando_condicional_1 . comandos
    (19) comandos -> . atribuicao FIM_LINHA comandos
    (20) comandos -> . chamada_de_procedimento FIM_LINHA comandos
    (21) comandos -> . comando_composto comandos
    (22) comandos -> . comando_condicional_1 comandos
    (23) comandos -> . comando_repetitivo_1 comandos
    (24) comandos -> . empty
    (25) atribuicao -> . variavel OPIGUAL_ATRIB expressao
    (29) chamada_de_procedimento -> . variavel AP lista_de_parametros FP
    (16) comando_composto -> . BEGIN new_begin comandos END
    (26) comando_condicional_1 -> . IF AP expressao FP THEN comandos
    (27) comando_condicional_1 -> . IF AP expressao FP THEN comandos ELSE comandos
    (28) comando_repetitivo_1 -> . WHILE AP expressao FP DO comandos
    (59) empty -> .
    (58) variavel -> . ID
